--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gradiweather</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header>
@@ -51,6 +51,6 @@
     <footer>
         &copy; 2021, Cristian Blanco
     </footer>
-    <script src="/assets/js/index.js"></script>
+    <script src="./assets/js/index.js"></script>
 </body>
 </html>
